Wed Sep 29 11:07:29 2004  Andreas Kupries <andreask@activestate.com>

	* htmlparse.test: Fixed [Tcllib SF Bug 1034580], see also
 	* htmlparse.tcl:  [Tcllib SF Bug 900041]. Thanks to Georgios
 	  Petasis <petasis@users.sourceforge.net> for the report and
 	  proposed solution. While the solution was not used as-is, it
 	  gave enough clues to make writing the actual solution
 	  trivial. It converts <tag attr /> to <tag attr></tag>. Added
 	  testcases.

2004-09-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* htmlparse.tcl (PrepareHtml): Fixed processing of comments
	  [Tcllib SF Bug 861287]. A legal end of comment is allowed to
	  have whitespace between '--' and '>'. Also recognize <-- as
	  bogus start of a comment (Should be <!-- to be legal). Convert
	  this to entities, making the bogus comment a PCDATA section
	  which shows up in the when a browser renders the document.

2004-09-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* htmlparse.test: Another patch coming from [Tcllib SF Bug
	  1018574]. Extended htmlparse-4.2 for better checking of &amp
	  handling.

2004-09-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* htmlparse.tcl: Accepted patch by David Graveraux fixing a number
	  of problems with HTML entities.
	  This fixes [Tcllib SF Bug 1018574].

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2004-02-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* htmlparse.tcl:  When changing the 'walk' method of 'struct::tree'
	* htmlparse.test: adaption of this module was forgotten. Fixed.
	  Also fixed problem with usage of 8.3'ism in 'mapEscapes.

2003-12-16  Joe English  <jenglish@users.sourceforge.net>

	* htmlparse.tcl: Fix for bug #861277 (backslashes in content)